--- a/style/style.css
+++ b/style/style.css
@@ -20,7 +20,8 @@
 
 /* header part styles */
 
-/* nav part */
+          /* nav part */
+
 .header {
     background: #ff900e1a;
     /* height: 100vh; */
@@ -56,7 +57,7 @@
     color: #424242;
 }
 
-/* banner part */
+        /* banner part */
 
 .banner-info {
     text-align: center;
@@ -89,4 +90,17 @@
     border-radius: 8px;
     color: #FFFFFF;
     padding: 20px;
+}
+
+
+/* responsive */
+
+@media only screen and (max-width:576px) {
+    .nav,.navbar {
+        flex-direction: column;
+        gap:15px;
+    }
+    .banner-info {
+        padding: 25px 0;
+    }
 }
