--- a/style/style.css
+++ b/style/style.css
@@ -11,22 +11,20 @@
 }
 
 .width {
-    align-items: center;
     width: 100%;
     max-width: 1400px;
     margin: 0 auto;
     height: 100%;
 }
 
+.header,
+.footer {
+    background: #ff900e1a;
+}
+
 /* header part styles */
 
 /* nav part */
-
-.header {
-    background: #ff900e1a;
-    /* height: 100vh; */
-}
-
 .nav {
     display: flex;
     justify-content: space-between;
@@ -98,6 +96,7 @@
     display: flex;
     padding-top: 85px;
     gap: 83px;
+    align-items: center;
 }
 
 .feature-img {
@@ -278,7 +277,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    gap:60px;
+    gap: 60px;
 }
 
 .sponsor-details {
@@ -288,7 +287,18 @@
     color: #727272;
 }
 
-/* responsive */
+/* footer part styles */
+.footer-details {
+    font-weight: 400;
+    font-size: 20px;
+    text-align: center;
+    color: #424242;
+    padding: 40px 0;
+}
+
+/*--------------
+                 responsive
+                            --------------- */
 
 @media only screen and (max-width:576px) {
 
@@ -343,11 +353,13 @@
         grid-template-columns: repeat(1, 1fr);
         gap: 10px;
     }
+
     /* sponsor company */
     .sponsor {
-        padding: 20px 0;
+        padding: 30px 0;
     }
+
     .sponsor-company {
         flex-direction: column;
-    }
+    }  
 }
