--- a/style/style.css
+++ b/style/style.css
@@ -334,6 +334,7 @@
                             --------------- */
 
 @media only screen and (max-width:576px) {
+    /* common part */
     .width{
         width: 100%;
         max-width: 400px;
