--- a/style/style.css
+++ b/style/style.css
@@ -14,11 +14,11 @@
     width: 100%;
     max-width: 1400px;
     margin: 0 auto;
-    height: 100%;
 }
 
 .header,
 .footer {
+    width: 100%;
     background: #ff900e1a;
 }
 
@@ -342,19 +342,25 @@
 
 @media only screen and (max-width:576px) {
 
-    /* header part */
-    .nav,
-    .navbar {
-        flex-direction: column;
-        gap: 15px;
-    }
+     /* header part */
+     .logo h3{
+        font-size: 40px;
+     }
+     .nav,
+     .navbar {
+         flex-direction: column;
+         gap: 15px;
+     }
+ 
+     .banner-info {
+        padding: 25px 25px;
+ 
+     }
+     .banner-title{
+        font-size: 40px;
+     }
 
-    .banner-info {
-       padding: 25px 25px;
-
-    }
-
-    /* features part */
+      /* features part */
 
     .features {
         flex-direction: column;
@@ -365,7 +371,6 @@
         grid-template-columns: repeat(1, 1fr);
         gap: 12px;
     }
-
     /* features list part */
     .containers {
         grid-template-columns: repeat(1, 1fr);
@@ -381,7 +386,6 @@
         font-size: 1rem;
         padding: 10px;
     }
-
     /* some facts */
     .some-facts {
         padding-top: 20px;
@@ -390,6 +394,7 @@
     .activites {
         grid-template-columns: repeat(1, 1fr);
         gap: 10px;
+        padding: 0 60px;
     }
 
     /* sponsor company */
@@ -400,9 +405,8 @@
     .sponsor-company {
         flex-direction: column;
     } 
-
-     /* photo grid  */
-     .our-photo-gallery{
+    /* photo grid  */
+    .our-photo-gallery{
         padding: 70px 0 0;
      }
      .photo-grid,.another-grid{
@@ -412,4 +416,7 @@
         padding: 20px;
         text-align: center;
     }
+
+
+ 
 }
